--- a/pages/collage/collagePersonInfo/collagePersonInfo.wxml
+++ b/pages/collage/collagePersonInfo/collagePersonInfo.wxml
@@ -2,6 +2,7 @@
     <view class='collageInfoBanner'>
         <image src='{{pageData.banner_image_url}}' mode='scaleToFill' />
     </view>
+    <!-- 标题 -->
     <view class='collageInfoOne'>
         <view class='oneTitle'>
             <view class='oneTitleChild'><text>{{pageData.title}}</text></view>
@@ -23,10 +24,12 @@
                 </view>
             </view>
         </view>
-        <!-- <view class='oneButton'>
-            <button bindtap='toCollageJoin' data-actid='{{pageData.id}}' data-forminfo='{{pageData.join_info}}' >我要参团</button>
-        </view> -->
+        <view class='payInfo' hidden='{{isPay}}'>
+            <view>恭喜你拼团成功,成团价<text>{{pageData.pay_price}}</text>元</view>
+            <button bindtap='toPayPage' data-actid='{{pageData.id}}' data-joinid='{{pageData.joiner_id}}' data-acttag='{{pageData.act_tag}}'>去支付</button>
+        </view>
     </view>
+    <!-- 我的团员 -->
     <view class='myTeam'>
         <view class='oneTitle'>
             <view class='oneTitleChild'><text>我的团员</text></view>
