--- a/pages/collage/collagePersonInfo/collagePersonInfo.wxss
+++ b/pages/collage/collagePersonInfo/collagePersonInfo.wxss
@@ -73,21 +73,7 @@
     height:160rpx;
     margin:0 auto;
 }
-/* .oneRuleChildTop{
-    width:670rpx;
-    height:60rpx;
-    display:flex;
-    justify-content:space-between;
-}
-.oneRuleChildTop view{
-    width:120rpx;
-    line-height:60rpx;
-    font-size:28rpx;
-    text-align:center;
-    background:#FF8A7E;
-    border-radius:5px 5px 0px 0px;
-    color:#fff;
-} */
+
 .oneRuleChildBottom{
     width:670rpx;
     height:100rpx;
@@ -134,7 +120,34 @@
 .oneButton button:nth-child(2){
     background:#CCC;
 }
-
+/* 支付按钮 */
+.payInfo{
+    width:670rpx;
+    min-height:20rpx;
+    background:#fff;
+    margin:65rpx auto 0rpx;
+    padding-bottom:20rpx;
+}
+.payInfo>view{
+    width:670rpx;
+    text-align:center;
+    font-size:28rpx;
+    line-height:40rpx;
+}
+.payInfo>view>text{
+    font-size:32rpx;
+    color:#E64240;
+    font-weight:bold;
+}
+.payInfo>button{
+    width:260rpx;
+    height:60rpx;
+    background:#E64240;
+    color:#fff;
+    font-size:28rpx;
+    line-height:60rpx;
+    margin-top:20rpx;
+}
 /* 分享活动*/
 .collageInfoSix{
     width:710rpx;
