--- a/pages/videoVote/videoVoteManList/videoVoteManList.wxss
+++ b/pages/videoVote/videoVoteManList/videoVoteManList.wxss
@@ -1,35 +1,116 @@
+@import '../../../utils/iconFont.wxss';
 page{
-    background:#fff;
+    background:#F2F2F2;
+    padding-bottom:110rpx;
 }
-.voteManListBtn{
+/* 页面功能 */
+.manListOpt{
     width:100%;
     height:90rpx;
-    background:#62C3FA;
-    color:#fff;
+    background:#D75022;
     position:fixed;
-    bottom:0rpx;
     left:0rpx;
-}
-.voteManListOne{
-    width:670rpx;
-    height:100rpx;
-    margin:110rpx  auto;
+    bottom:0rpx;
+    color:#fff;
+    line-height:90rpx;
+    font-size:26rpx;
     text-align:center;
-    color:#7b7b7b;
-    line-height:100rpx;
 }
-.voteManListTwo{
-    width:auto;
-    height:80rpx;
+
+
+/* 内容 */
+.manListContent{
+    width:710rpx;
+    min-height:40rpx;
+    background:#fff;
+    margin:20rpx auto 0rpx;
+}
+.contentTitle{
+    width:710rpx;
+    min-height:80rpx;
+    font-size:35rpx;
+    text-indent:20rpx;
+    background:#F6F7F9;
+}
+.contentTitle>view{
+    float:left;
+    min-height:80rpx;
     line-height:80rpx;
-    color:#62C3FA;
-    margin-left:160rpx;
 }
-.voteManListThree{
-    width:670rpx;
-    height:100rpx;
-    margin-left:80rpx;
-    font-size:30rpx;
-    line-height:100rpx;
+.contentTitle>view:nth-child(1){
+    width:650rpx;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
+}
+.contentTitle>view:nth-child(2){
+    float:right;
     color:#7b7b7b;
+}
+.contentMiddel{
+    width:710rpx;
+    height:240rpx;
+    background:#fff;
+}
+.contetnMiddleLeft{
+    width:400rpx;
+    height:200rpx;
+    float:left;
+    margin-top:20rpx;
+    margin-left:20rpx;
+    background:#fff;
+}
+.contetnMiddleLeft image{
+    width:400rpx;
+    height:200rpx;
+}
+.contetnMiddleRight{
+    width:260rpx;
+    height:200rpx;
+    float:right;
+    margin-right:18rpx;
+    margin-top:20rpx;
+}
+.contetnMiddleRight>view{
+    font-size:22rpx;
+    color:#7b7b7b;
+    margin-top:5rpx;
+}
+.contetnMiddleRight>view:nth-child(1){
+    width:260rpx;
+    height:50rpx;
+    font-size:26rpx;
+    background:#F2F2F2;
+    text-align:center;
+    line-height:50rpx;
+    border:0.5px solid #E9E9E9;
+    margin-top:0rpx;
+}
+.contetnMiddleRight>view:nth-child(1)>text{
+    color:#BB3217;
+}
+.contentBottom{
+    width:710rpx;
+    height:80rpx;
+    background:#F9F9F9;
+    font-size:30rpx;
+}
+.contentBottom view{
+    width:33%;
+    height:40rpx;
+    line-height:40rpx;
+    float:left;
+    text-align:center;
+    margin-top:20rpx;
+    border-right:0.5px solid #DEDEDE;
+}
+.contentBottom>view:nth-child(3){
+    border-right:0px;
+    color:#33AD2E;
+}
+.contentBottom>view:nth-child(1){
+    color:#CD2D19;
+}
+.contentBottom>view:nth-child(2){
+    color:#329ED3;
 }
