--- a/pages/baseOptions/schoolModel/schoolModel.wxss
+++ b/pages/baseOptions/schoolModel/schoolModel.wxss
@@ -39,6 +39,9 @@
     line-height:70rpx;
     font-size:30rpx;
     text-align:center;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 
 .empty{
