--- a/pages/videoVote/videoVoteAddJoiner/videoVoteAddJoiner.wxml
+++ b/pages/videoVote/videoVoteAddJoiner/videoVoteAddJoiner.wxml
@@ -43,6 +43,6 @@
                 <textarea name='declaration' value='{{pageData.declaration}}'></textarea>
             </view>
         </view>
-        <button form-type='submit' class='signUpBtn'>确认报名</button>
+        <button form-type='submit' class='signUpBtn'>{{btnText}}</button>
     </form>
 </view>
